# hyperstream

./: .gitignore  REVIEW_REPORT.md
hl-agent/: Cargo.toml  DATA_FLOW.md  DATA_PIPELINE_GUIDE.md  build.rs  config.toml.example  self-test.sh  test-config.toml  verify-all-topics.toml
hl-agent/examples/: inspect_blocks.rs  mock_sorter.rs  test_parser.rs  test_parsers.rs  test_real_block.rs  test_transactions_parser.rs  test_tx_hash_extraction.rs  verify_schemas.rs
hl-agent/monitoring/: GRAFANA_PANELS.md  GRAFANA_QUERIES.md  IMPROVEMENTS.md  README.md  docker-compose.yml  prometheus.yml  start.sh
hl-agent/monitoring/grafana/dashboards/: hl-agent.json  hl-agent.json.backup-1764749530
hl-agent/monitoring/rules/: hl-agent-latency.yml
hl-agent/proto/: PROTO_REVIEW.md  sorter.proto
hl-agent/src/: checkpoint.rs  config.rs  lib.rs  main.rs  metrics.rs  output_writer.rs  pipeline.rs  sorter_client.rs  tailer.rs  watcher.rs
hl-agent/src/parsers/: batch.rs  block_merger.rs  blocks.rs  buffered.rs  explorer_blocks.rs  explorer_txs.rs  fill_types.rs  fills.rs  hash_store.rs  misc_events.rs  mod.rs  orders.rs  replica_cmds.rs  schemas.rs  trades.rs  transactions.rs  utils.rs
hl-agent/src/runner/: file_mode.rs  mod.rs
hl-agent/src/sources/: explorer_ws.rs  mod.rs
