[package]
name = "hl-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "hl_agent"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
notify = "6"
prost = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.11", features = ["transport"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11"
