[package]
name = "hl-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "hl_agent"
path = "src/lib.rs"

[[bin]]
name = "hl-agent"
path = "src/main.rs"

[[bin]]
name = "ws-agent"
path = "src/bin/ws_agent.rs"

[dependencies]
anyhow = "1"
notify = "8"
prost = "0.14"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
futures = "0.3"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
lru = "0.16.2"
parking_lot = "0.12"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
tokio-util = { version = "0.7", features = ["rt"] }
prometheus = "0.13"
lazy_static = "1.4"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
chrono = "0.4"

[build-dependencies]
tonic-prost-build = "0.14"
